--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu4meu4I7/CkJNaROULDhj",
+      "authorship_tag": "ABX9TyM+0fVe6kEoxX//fxVhA0Wo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "po-GlxcIpAYb"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "id": "xqaLhvrsXytC"
       },
       "outputs": [],
       "source": [
         "class NeuralNetwork:\n",
-        ""
+        "  def __init__(self,layers):\n",
+        "    #layers is a list of elements where each element shows no of neurons in that layer\n",
+        "    self.no_of_layers = len(layers)\n",
+        "    self.sizes = layers\n",
+        "    self.weights = [np.random.randn(y, x) for x, y in zip(layers[:-1], layers[1:])]\n",
+        "    self.biases = [np.random.randn(y,1) for y in layers[1:]]\n",
+        "  def get_shape_of_weights(self):\n",
+        "    for i,layer in enumerate(self.weights):\n",
+        "      print(f\"Layer {i} has shape {layer.shape}\")\n",
+        "  def get_shape_of_bias(self):\n",
+        "    for i,layer in enumerate(self.biases):\n",
+        "      print(f\"Layer {i} has shape {layer.shape}\")\n",
+        "  def sigmoid(self, z):\n",
+        "    return 1.0/(1.0+np.exp(-z))\n",
+        "  def forward_propagation(self, a):\n",
+        "    for i in range(self.no_of_layers-1):\n",
+        "      a = self.sigmoid(np.dot(self.weights[i],a) + self.biases[i])\n",
+        "    return a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "network = NeuralNetwork([784,30,10])\n",
+        "network.get_shape_of_weights()\n",
+        "network.get_shape_of_bias()"
+      ],
+      "metadata": {
+        "id": "4pw7FOzTq5FE",
+        "outputId": "1a2403f6-224d-406b-9d20-3c3d369af61a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Layer 0 has shape (30, 784)\n",
+            "Layer 1 has shape (10, 30)\n",
+            "Layer 0 has shape (30, 1)\n",
+            "Layer 1 has shape (10, 1)\n"
+          ]
+        }
       ]
     },
     {
@@ -48,29 +104,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bceijdXIYJ_i",
-        "outputId": "a9e94007-0a09-467c-958f-9519b6519335"
+        "outputId": "9d2650db-bbce-46c3-c53c-804867c26b79"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-04-03 16:00:43--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "--2025-04-05 15:52:45--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz [following]\n",
-            "--2025-04-03 16:00:43--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2025-04-05 15:52:45--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 17051982 (16M) [application/octet-stream]\n",
             "Saving to: ‘mnist.pkl.gz’\n",
             "\n",
-            "mnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.05s   \n",
+            "mnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-04-03 16:00:43 (305 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
+            "2025-04-05 15:52:46 (137 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
             "\n"
           ]
         }
@@ -90,19 +146,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "1qDiZDPkY9z8",
-        "outputId": "a7455388-8cfb-4b8c-8337-896a4fabf4fa"
+        "outputId": "4ae00b96-ec5a-4210-d8c8-d56e5c675488"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(50000, 784)\n",
-            "(50000,)\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'gzip' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-f0bf6c8f5fd4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfile_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"mnist.pkl.gz\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mgzip\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mmnist_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'gzip' is not defined"
           ]
         }
       ]
