Implemented few more Neural Nets from datasets using the NeuralNetwork class in the code

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqWaiYyn0kCRMeLoXqNfA7",
+      "authorship_tag": "ABX9TyM7c4DCnQE7/F8MLdgWZT+Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,11 +289,11 @@
         "model.fit(X_train, y_train)\n"
       ],
       "metadata": {
-        "id": "gQGxRFfFIkHu",
-        "outputId": "05c9e282-4e08-499b-bb27-66de183eb7e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gQGxRFfFIkHu",
+        "outputId": "05c9e282-4e08-499b-bb27-66de183eb7e6"
       },
       "execution_count": 50,
       "outputs": [
@@ -321,6 +321,64 @@
             "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9647 - loss: 0.0624\n",
             "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9641 - loss: 0.0623\n",
             "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9660 - loss: 0.0605\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow\n",
+        "from tensorflow.keras.datasets import fashion_mnist\n",
+        "import numpy as np\n",
+        "\n",
+        "def vectorized_label(j):\n",
+        "    e = np.zeros((10, 1))\n",
+        "    e[j] = 1.0\n",
+        "    return e\n",
+        "\n",
+        "(X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()\n",
+        "\n",
+        "X_train = [x.reshape(-1, 1) / 255.0 for x in X_train]\n",
+        "y_train = [vectorized_label(y) for y in y_train]\n",
+        "\n",
+        "X_test = [x.reshape(-1, 1) / 255.0 for x in X_test]\n",
+        "y_test = [vectorized_label(y) for y in y_test]\n",
+        "\n",
+        "model = NeuralNetwork([784, 64, 10])\n",
+        "model.fit(X_train, y_train, epochs=10, batch_size=32, learning_rate=3.0)\n"
+      ],
+      "metadata": {
+        "id": "o6JwzlVgMUMN",
+        "outputId": "8619cca5-39ce-4cdd-e502-661d7405d7df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7004 - loss: 0.3959\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7788 - loss: 0.3061\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 18s  - accuracy: 0.7886 - loss: 0.2935\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 16s  - accuracy: 0.7853 - loss: 0.2978\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8022 - loss: 0.2708\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 18s  - accuracy: 0.8013 - loss: 0.2711\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 16s  - accuracy: 0.8067 - loss: 0.2649\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 16s  - accuracy: 0.8675 - loss: 0.2012\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8688 - loss: 0.1984\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8733 - loss: 0.1931\n"
           ]
         }
       ]
